--- a/week4/hello.ipynb
+++ b/week4/hello.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "私はここで産まれました\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('私はここで産まれました')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
