--- a/week6/week6.ipynb
+++ b/week6/week6.ipynb
@@ -341,7 +341,7 @@
     "                  popup='<div style=\"width:350px\">'+'</div>', \n",
     "                  tooltip=row['name'],\n",
     "                ).add_to(m)\n",
-    "m.save('map html')\n",
+    "m.save('map.html')\n",
     "\n",
     "\n",
     "\n",
